--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Courier-New", "Courier New", Courier, monospace;
   background: linear-gradient(
     90deg,
     #c6ffdd,
     #fbd786,
     #f7797d
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+button {
+  cursor: pointer;
 }
 
 code {
