--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,15 @@
 .Tilt {
-  background: linear-gradient(to top, #c6ffdd, #fbd786, #f7797d);
+	background: #cc95c0; /* fallback for old browsers */
+	background: -webkit-linear-gradient(
+		to bottom,
+		#7aa1d2,
+		#dbd4b4,
+		#cc95c0
+	); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(
+		to bottom,
+		#7aa1d2,
+		#dbd4b4,
+		#cc95c0
+	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
