--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,25 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "Courier-New", "Courier New", Courier, monospace;
-	background: linear-gradient(
+	font-family: 'Courier-New', 'Courier New', Courier, monospace;
+	/* background: linear-gradient(
 		90deg,
 		#c6ffdd,
 		#fbd786,
 		#f7797d
+	); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #cc95c0; /* fallback for old browsers */
+	background: -webkit-linear-gradient(
+		to right,
+		#7aa1d2,
+		#dbd4b4,
+		#cc95c0
+	); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(
+		to right,
+		#7aa1d2,
+		#dbd4b4,
+		#cc95c0
 	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
